<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.ForgetPasswordSuccessMessage"
    android:background="@color/babypink"
    android:padding="30dp"
    android:orientation="vertical">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:padding="5dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textColor="@color/ic_launcher_background"
            android:textSize="40sp"
            android:fontFamily="@font/convergence"
            android:layout_marginTop="-80dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textAllCaps="true"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/skip"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated_success_message"
            android:textColor="@color/ic_launcher_background"
            android:textSize="16sp"
            android:fontFamily="@font/convergence"
            android:textAlignment="center"
            android:gravity="center"
           />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/convergence"
            android:background="@color/ic_launcher_background"
            android:textColor="@color/babypink"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>