<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.MakeSelection"
    android:background="@color/babypink"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/ic_launcher_background"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/convergence"
            android:layout_marginTop="30dp"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection_detail"
            android:textColor="@color/ic_launcher_background"
            android:textSize="20sp"
            android:fontFamily="@font/convergence"
            android:layout_marginTop="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorTransparentWhite"
            android:padding="10dp">
            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/mobile_custom_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="25sp"
                android:fontFamily="@font/convergence"
                android:layout_toRightOf="@+id/mobile_icon"
                android:layout_marginTop="35dp"/>
            <TextView
                android:id="@+id/mobile_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+91 1234567890"
                android:textSize="25sp"
                android:fontFamily="@font/convergence"
                android:layout_toRightOf="@+id/mobile_icon"
                android:layout_below="@+id/mobile_title"
                android:layout_marginTop="35dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorTransparentWhite"
            android:padding="10dp">
            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/mobile_custom_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_email"
                android:textSize="25sp"
                android:fontFamily="@font/convergence"
                android:layout_toRightOf="@+id/email_icon"
                android:layout_marginTop="35dp"/>
            <TextView
                android:id="@+id/email_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="abc@gmail.com"
                android:textSize="25sp"
                android:fontFamily="@font/convergence"
                android:layout_toRightOf="@+id/email_icon"
                android:layout_below="@+id/email_title"
                android:layout_marginTop="35dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>
        </RelativeLayout>

    </LinearLayout>



</ScrollView>